@@ -5,6 +5,7 @@
 ==========================
 - FIX: When migrating from ivyde alpha to ivyde beta eclipse is throwing NPE at startup (IVYDE-136) (thanks to Daniel Becheanu)
 - FIX: The retrieve configuration doesn't support '*' as accepted types (IVYDE-137) (thanks to Daniel Becheanu)
+- FIX: NPE when a project:/// path is used and path does not exist (IVYDE-144)
 
   version 2.0.0 beta1
 ==========================
